--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.18)
 project(Esquema LANGUAGES CXX VERSION 0.1.0)
 add_executable(esquema "")
+add_subdirectory(3rd_party)
 add_subdirectory(src)
