Added tests for esquema, fixed lexer bugs revealed by tests

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,35 +1,32 @@
 target_sources(
-    esquema
-PRIVATE
+    esquema_lib
+PUBLIC
     interp.hh interp.cc
     lexer.hh lexer.cc
     native_proc.hh native_proc.cc
     parser.hh parser.cc
-    main.cc
 )
 
 target_include_directories(
-    esquema
-PRIVATE
+    esquema_lib
+PUBLIC
     ${CMAKE_CURRENT_LIST_DIR}
 )
 
 target_compile_features(
+    esquema_lib
+PUBLIC
+    cxx_std_20
+)
+
+target_sources(
     esquema
 PRIVATE
-    cxx_std_20
+    main.cc
 )
 
 target_link_libraries(
     esquema
 PRIVATE
-    linenoise
+     esquema_lib linenoise 
 )
-
-if (ESQUEMA_BUILD_TESTS)
-    target_link_libraries(
-        esquema
-    PRIVATE
-        doctest
-    )
-endif()
