Some happy little comments so that what is obvious to me is now more obvious to others

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.18)
 
 project(Esquema LANGUAGES CXX VERSION 0.1.0)
 
+# Let the user turn off testing if they want
 option(
     ESQUEMA_BUILD_TESTS "Build the unit tests" ON
 )
@@ -10,8 +11,10 @@ if (NOT ESQUEMA_BUILD_TESTS)
     set(BUILD_TESTING Off)
 endif()
 
+# This will make it easier to build the tests later
 set(ESQUEMA_SRC_DIR ${CMAKE_PROJECT_SOURCE_DIR}/src)
 
+# Grab linenoise from GIT and make a happy target to it 
 include(FetchContent)
 FetchContent_Declare(
     libnoise
@@ -20,8 +23,18 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(libnoise)
 
 add_executable(esquema "")
+
+# I tried making an OBJECT library but got lots
+# of linker errors. I've done it before with
+# great success. I don't know if it's a Ninja
+# thing or if something else changed since I 
+# did it last
 add_library(esquema_lib STATIC "")
+
 add_subdirectory(src)
+
+# Only if we want the tests grab
+# googletest from GIT and enable ctest
 if (ESQUEMA_BUILD_TESTS)
     include(CTest)
     FetchContent_Declare(
@@ -33,5 +46,8 @@ if (ESQUEMA_BUILD_TESTS)
     add_subdirectory(tests)
 endif()
 
+# Installation goodness, not going to install esquema_lib
+# because it was never intended to be a library
 include(GNUInstallDirs)
 install(TARGETS esquema DESTINATION bin)
+
