--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,5 @@
+# package all this up so that testing
+# is easier
 target_sources(
     esquema_lib
 PUBLIC
@@ -7,24 +9,28 @@ PUBLIC
     parser.hh parser.cc
 )
 
+# Look in this directory for headers
 target_include_directories(
     esquema_lib
 PUBLIC
     ${CMAKE_CURRENT_LIST_DIR}
 )
 
+# C++20 because we can
 target_compile_features(
     esquema_lib
 PUBLIC
     cxx_std_20
 )
 
+# The REPL proper
 target_sources(
     esquema
 PRIVATE
     main.cc
 )
 
+# Link in libnoise too
 target_link_libraries(
     esquema
 PRIVATE
